# polyinfer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: quickstart.py
scripts/: test_install.bat  test_install.sh  test_installation.py
src/polyinfer/: __init__.py  _logging.py  cli.py  compare.py  config.py  discovery.py  mlir.py  model.py  nvidia_setup.py  quantization.py
src/polyinfer/backends/: __init__.py  _autoload.py  base.py  registry.py
src/polyinfer/backends/iree/: __init__.py  backend.py
src/polyinfer/backends/onnxruntime/: backend.py
src/polyinfer/backends/openvino/: backend.py
src/polyinfer/backends/tensorrt/: backend.py
tests/: conftest.py  test_backend_options.py  test_backends.py  test_benchmark.py  test_devices.py  test_inference.py  test_intel_devices.py  test_logging.py  test_mlir.py  test_quantization.py  test_yolov8.py
